[package]
name = "writestarve"
version = "0.1.0"
authors = ["Ralph Giles <rgiles@brave.com>"]
description = "Measure RwLock write starvation"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
